# custom_gamdl

./: .gitignore  README.md  pyproject.toml
custom_gamdl/: apple_music_api.py  cli.py  constants.py  downloader.py
