[project]
name = "custom_gamdl"
description = "A Python CLI app for downloading Apple Music songs/music videos/posts."
requires-python = ">=3.8"
authors = [{ name = "glomatico" }]
dependencies = [
    "ciso8601",
    "click",
    "inquirerpy",
    "m3u8",
    "pillow",
    "pywidevine",
    "pyyaml",
    "yt-dlp",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/glomatico/custom_gamdl"
repository = "https://github.com/glomatico/custom_gamdl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
custom_gamdl = "custom_gamdl.cli:main"
