[project]
name = "custom_gamdl"
description = "A Python CLI app for downloading Apple Music songs, music videos and post videos. (MODIFIED FOR MEDIAHARBOR)"
requires-python = ">=3.9"
authors = [{ name = "glomatico" }]
dependencies = [
    "click",
    "colorama",
    "inquirerpy",
    "m3u8",
    "mutagen",
    "pillow",
    "pywidevine",
    "yt-dlp",
]
readme = "README.md"
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/glomatico/gamdl"
repository = "https://github.com/glomatico/gamdl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
custom_gamdl = "custom_gamdl.cli:main"
